<resources>
    <string name="app_name">GameScout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_instructions">Alternatively, sign in with google using the button below</string>
    <string name="start_button">Login</string>
    <string name="thumbnail">Thumbnail goes Here</string>
    <string name="start_email_hint">Enter Email</string>
    <string name="start_password_hint">Enter Password</string>
    <string name="email_login_instructions">For email login, please enter email and password</string>
    <string name="logout">Logout</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="register_a_new_user">Register a new user</string>
</resources>